--- a/index.html
+++ b/index.html
@@ -15,8 +15,6 @@
     />
     <!-- Seu CSS personalizado pode ser adicionado aqui -->
     <style>
-      /* ... Seu CSS existente ... */
-
       /* Adicione estilos personalizados aqui */
       .card {
         box-shadow: 0 4px 8px rgba(0, 0, 0, 1); /* Sombra nos cards */
@@ -25,7 +23,7 @@
         /* Adicione os estilos específicos para o efeito hover */
       }
       .card-background {
-        background-image: url("./imagens/pp_504x498-pad_600x600_f8f8f8.u3-removebg-preview.png");
+        background-color: red;
         background-position: center;
         border-radius: 2%;
       }
@@ -163,6 +161,10 @@
     </nav>
 
     <div class="container mt-5">
+      <!-- Mensagem de Pokémon não encontrado -->
+      <div id="notFoundMessage" class="text-center mt-3" style="display: none">
+        <h4>Pokémon não encontrado</h4>
+      </div>
       <!-- Lista de Pokémons -->
       <div class="row" id="pokemon-list">
         <!-- A lista de Pokémons será exibida aqui -->
@@ -205,60 +207,147 @@
         </div>
       </div>
     </div>
-
+    <button
+      id="scrollTopButton"
+      class="btn btn-secondary btn-sm"
+      onclick="scrollToTop()"
+    >
+      <img src="./imagens/017-removebg-preview.png" alt="Pokémon" />
+    </button>
     <!-- Bootstrap JS e dependências -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <script>
       document.addEventListener("DOMContentLoaded", function () {
-  const pokemonList = document.getElementById("pokemon-list");
-  let offset = 0;
-  const limit = 20;
+        const pokemonList = document.getElementById("pokemon-list");
+        let offset = 0;
+        const limit = 20;
 
-  // Função para carregar os Pokémon
-  function loadPokemon() {
-    // Fetch para obter a lista de Pokémon com base no offset e limit
-    fetch(`https://pokeapi.co/api/v2/pokemon?offset=${offset}&limit=${limit}`)
-      .then((response) => response.json())
-      .then((data) => {
-        const pokemonData = data.results;
-
-        pokemonData.forEach(async (pokemon) => {
-          const card = document.createElement("div");
-          card.className = "col-md-3 mb-4 card-background"; // Adiciona a classe card-background
-
-          const pokemonNumber = pokemon.url.split("/")[6]; // Obtém o número do Pokémon a partir da URL
-          const formattedNumber = String(pokemonNumber).padStart(3, "0"); // Formata para ter três dígitos (preenchendo com zeros à esquerda, se necessário)
-          const pokemonType = await fetch(pokemon.url)
+        // Função para carregar os Pokémon
+        function loadPokemon() {
+          // Fetch para obter a lista de Pokémon com base no offset e limit
+          fetch(
+            `https://pokeapi.co/api/v2/pokemon?offset=${offset}&limit=${limit}`
+          )
             .then((response) => response.json())
-            .then((pokemon) => pokemon.types[0].type.name);
+            .then((data) => {
+              const pokemonData = data.results;
 
-          card.innerHTML = `
-                        <div class="card ${pokemonType}">
-                            <img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/${pokemonNumber}.png" class="card-img-top" alt="${pokemon.name}">
-                            <div class="card-body">
-                                <h5 class="card-title">#${formattedNumber} - ${pokemon.name}</h5>
-                                <a href="pokemon-details.html?url=${pokemon.url}" class="btn btn-primary">Ver Detalhes</a>
-                            </div>
-                        </div>
-                    `;
+              pokemonData.forEach(async (pokemon) => {
+                const card = document.createElement("div");
+                card.className = "col-md-3 mb-4 card-background"; // Adiciona a classe card-background
 
-          pokemonList.appendChild(card);
+                const pokemonNumber = pokemon.url.split("/")[6]; // Obtém o número do Pokémon a partir da URL
+                const formattedNumber = String(pokemonNumber).padStart(3, "0"); // Formata para ter três dígitos (preenchendo com zeros à esquerda, se necessário)
+                const pokemonType = await fetch(pokemon.url)
+                  .then((response) => response.json())
+                  .then((pokemon) => pokemon.types[0].type.name);
+
+                card.innerHTML = `
+                <div class="card ${pokemonType}">
+                    <img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/${pokemonNumber}.png" class="card-img-top" alt="${pokemon.name}">
+                    <div class="card-body">
+                        <h5 class="card-title">#${formattedNumber} - ${pokemon.name}</h5>
+                        <a href="pokemon-details.html?url=${pokemon.url}" class="btn btn-primary">Abrir Pokedex</a>
+                    </div>
+                </div>
+            `;
+
+                pokemonList.appendChild(card);
+              });
+
+              // Incrementa o offset para a próxima carga
+              offset += limit;
+            })
+            .catch((error) => {
+              console.error("Erro ao carregar mais Pokémon:", error);
+            });
+        }
+
+        // Inicializa a carga dos primeiros Pokémon
+        loadPokemon();
+
+        // Adiciona um evento de clique ao botão "Ver Mais"
+        document
+          .getElementById("loadMoreButton")
+          .addEventListener("click", loadPokemon);
+
+        // Adiciona um ouvinte de evento ao scroll para verificar a posição e exibir/ocultar o botão "Voltar ao Topo"
+        window.addEventListener("scroll", function () {
+          toggleScrollTopButton();
         });
-
-        // Incrementa o offset para a próxima carga
-        offset += limit;
-      })
-      .catch((error) => {
-        console.error("Erro ao carregar mais Pokémon:", error);
       });
-  }
 
-  // Inicializa a carga dos primeiros Pokémon
-  loadPokemon();
+      // Função para verificar a posição de rolagem e exibir/ocultar o botão "Voltar ao Topo"
+      function toggleScrollTopButton() {
+        const scrollTopButton = document.getElementById("scrollTopButton");
+        const scrollPosition = window.scrollY;
 
-  // Adiciona um evento de clique ao botão "Ver Mais"
-  document.getElementById("loadMoreButton").addEventListener("click", loadPokemon);
-});
+        // Exibe o botão quando o scroll for superior a 300 pixels
+        if (scrollPosition > 300) {
+          scrollTopButton.style.display = "block";
+        } else {
+          scrollTopButton.style.display = "none";
+        }
+      }
+
+      // Função para rolar suavemente de volta ao topo
+      function scrollToTop() {
+        window.scrollTo({
+          top: 0,
+          behavior: "smooth",
+        });
+      }
+
+// Função para pesquisar Pokémon pelo nome ou número
+function searchPokemon() {
+  const searchInput = document.getElementById("searchInput").value.toLowerCase();
+  const notFoundMessage = document.getElementById("notFoundMessage");
+  const pokemonList = document.getElementById("pokemon-list");
+
+  // Oculta a mensagem de "Pokémon não encontrado" e limpa a lista de Pokémon
+  notFoundMessage.style.display = "none";
+  pokemonList.innerHTML = "";
+
+  // Fetch para obter o Pokémon pelo nome ou número
+  fetch(`https://pokeapi.co/api/v2/pokemon/${searchInput}`)
+    .then((response) => {
+      if (!response.ok) {
+        // Se não encontrar o Pokémon, exibe a mensagem
+        notFoundMessage.style.display = "block";
+        throw new Error("Pokémon não encontrado");
+      }
+      return response.json();
+    })
+    .then((pokemon) => {
+      // Exibe o Pokémon encontrado centralizado na tela
+      const card = document.createElement("div");
+      card.className = "col-md-3 mb-4 card-background"; // Adiciona a classe card-background
+
+      const formattedNumber = String(pokemon.id).padStart(3, "0"); // Formata para ter três dígitos (preenchendo com zeros à esquerda, se necessário)
+      const pokemonType = pokemon.types[0].type.name;
+
+      card.innerHTML = `
+        <div class="card ${pokemonType}">
+            <img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/${pokemon.id}.png" class="card-img-top" alt="${pokemon.name}">
+            <div class="card-body">
+                <h5 class="card-title">#${formattedNumber} - ${pokemon.name}</h5>
+                <button class="btn btn-primary" id="openPokedexButton">Abrir Pokedex</button>
+            </div>
+        </div>
+      `;
+
+      pokemonList.appendChild(card);
+
+      // Adiciona um evento de clique ao botão após ele ser criado
+      const openPokedexButton = document.getElementById("openPokedexButton");
+      openPokedexButton.addEventListener("click", function () {
+        window.location.href = `pokemon-details.html?id=${pokemon.id}`;
+      });
+    })
+    .catch((error) => {
+      console.error("Erro ao pesquisar Pokémon:", error);
+    });
+}
 
     </script>
   </body>
