--- a/pokemon-details.html
+++ b/pokemon-details.html
@@ -7,22 +7,20 @@
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
     />
     <title>Detalhes do Pokémon</title>
-    <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="styles.css">
 
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
       rel="stylesheet"
     />
     <!-- Seu CSS personalizado pode ser adicionado aqui -->
+    
   </head>
   <body>
     <!-- Barra de Navegação -->
     <nav class="navbar navbar-expand-lg navbar-light bg-danger">
       <a class="navbar-brand" href="./index.html">
-        <img
-          src="./imagens/pokedex_kanto_by_thekevmeister_dcis2l3-fullview-removebg-preview.png"
-          alt="Pokeball"
-        />
+        <img src="./imagens/pokedex_kanto_by_thekevmeister_dcis2l3-fullview-removebg-preview.png" alt="Pokeball" />
         <img
           src="./imagens/download-removebg-preview.png.png"
           alt="Pokédex Logo"
@@ -66,137 +64,115 @@
 
     <script>
       document.addEventListener("DOMContentLoaded", function () {
-        // Obter o parâmetro 'url' da URL
-        const urlParams = new URLSearchParams(window.location.search);
-        const pokemonUrl = urlParams.get("url");
+    // Obter o parâmetro 'url' da URL
+    const urlParams = new URLSearchParams(window.location.search);
+    const pokemonUrl = urlParams.get("url");
 
-        // Função para mostrar detalhes do Pokémon
-        fetch(pokemonUrl)
+    // Função para mostrar detalhes do Pokémon
+    fetch(pokemonUrl)
+      .then((response) => response.json())
+      .then((pokemon) => {
+        const pokemonDetailsContainer = document.getElementById("pokemon-details");
+
+        // Obtém as versões da espécie do Pokémon
+        const speciesUrl = pokemon.species.url;
+        fetch(speciesUrl)
           .then((response) => response.json())
-          .then((pokemon) => {
-            const pokemonDetailsContainer =
-              document.getElementById("pokemon-details");
+          .then((species) => {
+            const regionText = species.generation.name
+              ? `<p><strong>Geração:</strong> ${species.generation.name}</p>`
+              : "";
 
-            // Obtém as versões da espécie do Pokémon
-            const speciesUrl = pokemon.species.url;
-            fetch(speciesUrl)
-              .then((response) => response.json())
-              .then((species) => {
-                const regionText = species.generation.name
-                  ? `<p><strong>Geração:</strong> ${species.generation.name}</p>`
-                  : "";
+            // Obtém a descrição do Pokémon
+            const flavorTextEntries = species.flavor_text_entries;
+            const description = flavorTextEntries.find(
+              (entry) => entry.language.name === "en"
+            );
 
-                // Obtém a descrição do Pokémon
-                const flavorTextEntries = species.flavor_text_entries;
-                const description = flavorTextEntries.find(
-                  (entry) => entry.language.name === "en"
-                );
+            const descriptionText = description
+              ? `<p><strong>Descrição:</strong> ${description.flavor_text}</p>`
+              : "";
 
-                const descriptionText = description
-                  ? `<p><strong>Descrição:</strong> ${description.flavor_text}</p>`
-                  : "";
-
-                // Obtém as fraquezas do Pokémon
-                const weaknessesPromises = pokemon.types.map((type) => {
-                  const typeUrl = type.type.url;
-                  return fetch(typeUrl)
-                    .then((response) => response.json())
-                    .then((typeDetails) =>
-                      typeDetails.damage_relations.double_damage_from.map(
-                        (weakness) => weakness.name
-                      )
-                    )
-                    .catch((error) => {
-                      console.error("Erro ao obter fraquezas:", error);
-                      return [];
-                    });
+            // Obtém as fraquezas do Pokémon
+            const weaknessesPromises = pokemon.types.map((type) => {
+              const typeUrl = type.type.url;
+              return fetch(typeUrl)
+                .then((response) => response.json())
+                .then((typeDetails) =>
+                  typeDetails.damage_relations.double_damage_from.map(
+                    (weakness) => weakness.name
+                  )
+                )
+                .catch((error) => {
+                  console.error("Erro ao obter fraquezas:", error);
+                  return [];
                 });
+            });
 
-                // Após todas as requisições estarem completas, exibe os detalhes
-                Promise.all(weaknessesPromises)
-                  .then((allWeaknesses) => {
-                    // Flatten the array of weaknesses
-                    const uniqueWeaknesses = [...new Set(allWeaknesses.flat())];
+            // Após todas as requisições estarem completas, exibe os detalhes
+            Promise.all(weaknessesPromises)
+              .then((allWeaknesses) => {
+                // Flatten the array of weaknesses
+                const uniqueWeaknesses = [...new Set(allWeaknesses.flat())];
 
-                    const weaknessesText =
-                      uniqueWeaknesses.length > 0
-                        ? `<p><strong>Fraquezas:</strong> ${uniqueWeaknesses.join(
-                            ", "
-                          )}</p>`
-                        : "";
+                const weaknessesText =
+                  uniqueWeaknesses.length > 0
+                    ? `<p><strong>Fraquezas:</strong> ${uniqueWeaknesses.join(", ")}</p>`
+                    : "";
 
-                    pokemonDetailsContainer.innerHTML = `
+                pokemonDetailsContainer.innerHTML = `
                   <img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/${
                     pokemon.id
                   }.png" class="img-fluid" alt="${pokemon.name}">
                   <div class="pokemon-info">
-                    <h5 class="card-title">Detalhes do Pokémon - ${
-                      pokemon.name
-                    }</h5>
+                    <h5 class="card-title">Detalhes do Pokémon - ${pokemon.name}</h5>
                     <p><strong>Número:</strong> ${pokemon.id}</p>
                     ${regionText}
                     ${descriptionText}
-                    <p><strong>Tipo:</strong> ${pokemon.types
-                      .map((type) => type.type.name)
-                      .join(", ")}</p>
-                    <p><strong>Habilidades:</strong> ${pokemon.abilities
-                      .map((ability) => ability.ability.name)
-                      .join(", ")}</p>
+                    <p><strong>Tipo:</strong> ${pokemon.types.map((type) => type.type.name).join(", ")}</p>
+                    <p><strong>Habilidades:</strong> ${pokemon.abilities.map((ability) => ability.ability.name).join(", ")}</p>
                     <p><strong>Estatísticas:</strong></p>
                     <ul>
-                      ${pokemon.stats
-                        .map(
-                          (stat) =>
-                            `<li><strong>${stat.stat.name}:</strong> ${stat.base_stat}</li>`
-                        )
-                        .join("")}
+                      ${pokemon.stats.map(
+                        (stat) => `<li><strong>${stat.stat.name}:</strong> ${stat.base_stat}</li>`
+                      ).join("")}
                     </ul>
                     ${weaknessesText}
                   </div>
                 `;
-                  })
-                  .catch((error) => {
-                    console.error("Erro ao obter fraquezas:", error);
-                  });
               })
               .catch((error) => {
-                console.error("Erro ao obter espécie do Pokémon:", error);
+                console.error("Erro ao obter fraquezas:", error);
               });
           })
           .catch((error) => {
-            console.error("Erro ao obter detalhes do Pokémon:", error);
+            console.error("Erro ao obter espécie do Pokémon:", error);
           });
+      })
+      .catch((error) => {
+        console.error("Erro ao obter detalhes do Pokémon:", error);
       });
+  });
 
-      // Função para pesquisar Pokémon
-      function searchPokemon() {
-        const searchInput = document
-          .getElementById("searchInput")
-          .value.toLowerCase();
+  // Função para pesquisar Pokémon
+  function searchPokemon() {
+    const searchInput = document.getElementById("searchInput").value.toLowerCase();
 
-        // Obtem todos os cards de Pokémon
-        const pokemonCards = document.querySelectorAll(".card");
+    // Obtem todos os cards de Pokémon
+    const pokemonCards = document.querySelectorAll(".card");
 
-        // Percorre os cards para ocultar/mostrar com base na pesquisa
-        pokemonCards.forEach((card) => {
-          const pokemonName = card
-            .querySelector(".card-title")
-            .textContent.toLowerCase();
-          const pokemonNumber = card
-            .querySelector(".card-title")
-            .textContent.split(" - ")[0]
-            .slice(1);
+    // Percorre os cards para ocultar/mostrar com base na pesquisa
+    pokemonCards.forEach((card) => {
+      const pokemonName = card.querySelector(".card-title").textContent.toLowerCase();
+      const pokemonNumber = card.querySelector(".card-title").textContent.split(" - ")[0].slice(1);
 
-          if (
-            pokemonName.includes(searchInput) ||
-            pokemonNumber.includes(searchInput)
-          ) {
-            card.style.display = "block";
-          } else {
-            card.style.display = "none";
-          }
-        });
+      if (pokemonName.includes(searchInput) || pokemonNumber.includes(searchInput)) {
+        card.style.display = "block";
+      } else {
+        card.style.display = "none";
       }
+    });
+  }
     </script>
   </body>
 </html>
