--- a/pokemon-details.html
+++ b/pokemon-details.html
@@ -14,7 +14,6 @@
       rel="stylesheet"
     />
     <!-- Seu CSS personalizado pode ser adicionado aqui -->
-    
   </head>
   <body>
     <!-- Barra de Navegação -->
@@ -22,12 +21,9 @@
       <a class="navbar-brand" href="./index.html">
         <img src="./imagens/pokedex_kanto_by_thekevmeister_dcis2l3-fullview-removebg-preview.png" alt="Pokeball" />
         <img
-          src="./imagens/download-removebg-preview.png.png"
+          src="./imagens/giphy.gif"
           alt="Pokédex Logo"
-          class="logo"
-        />
-        <img
-          src="./imagens/f01b52cb89c607a7358d54b112ffe93e-removebg-preview.png"
+          class="galera"
         />
       </a>
       <div class="collapse navbar-collapse" id="navbarNav">
