--- a/index.html
+++ b/index.html
@@ -13,24 +13,22 @@
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
       rel="stylesheet"
     />
-    <!-- Seu CSS personalizado pode ser adicionado aqui -->
     <style>
       body {
         background-image: url("./imagens/d0559662c49b354f89770b376c213e00.gif");
-        background-size: cover; /* Ajusta o tamanho para cobrir toda a tela */
+        background-size: cover; 
         background-attachment: fixed;
-        background-repeat: no-repeat; /* Impede a repetição do GIF */
+        background-repeat: no-repeat; 
       }
-      /* Adicione estilos personalizados aqui */
       .card {
-        box-shadow: 0 4px 8px rgba(0, 0, 0, 1); /* Sombra nos cards */
-        transition: box-shadow 0.3s ease; /* Transição suave para a sombra */
+        box-shadow: 0 4px 8px rgba(0, 0, 0, 2); 
+        transition: box-shadow 0.3s ease; 
       }
       .card:hover {
-        box-shadow: 0 8px 16px rgba(0, 0, 0, 1); /* Aumenta a sombra ao passar o mouse */
+        box-shadow: 0 8px 16px rgba(0, 0, 0, 2); 
         transform: scale(
           1.05
-        ); /* Aumenta ligeiramente o tamanho ao passar o mouse */
+        ); 
       }
       .steel {
         background-color: #b8b8d0;
@@ -110,7 +108,6 @@
     </style>
   </head>
   <body>
-    <!-- Barra de Navegação -->
     <nav class="navbar navbar-expand-lg navbar-light bg-danger">
       <a class="navbar-brand" href="#">
         <img
@@ -123,7 +120,7 @@
           class="logo"
         />
         <img
-          src="./imagens/f01b52cb89c607a7358d54b112ffe93e-removebg-preview.png"
+          src="./imagens/giphy (1).gif"
         />
       </a>
       <button
@@ -210,7 +207,8 @@
       class="btn btn-secondary btn-sm"
       onclick="scrollToTop()"
     >
-      <img src="./imagens/giphyy.gif" alt="Pokémon" />
+    
+      <img src="./imagens/giphyy.gif"  alt="Pokémon" /> <p>⬆︎</p>
     </button>
     <!-- Bootstrap JS e dependências -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
