--- a/pokemon-details.html
+++ b/pokemon-details.html
@@ -1,125 +1,117 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1, shrink-to-fit=no"
-    />
-    <title>Detalhes do Pokémon</title>
-    <link rel="stylesheet" href="styles.css">
 
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-    />
-    <!-- Seu CSS personalizado pode ser adicionado aqui -->
-  </head>
-  <body>
-    <!-- Barra de Navegação -->
-    <nav class="navbar navbar-expand-lg navbar-light bg-danger">
-      <a class="navbar-brand" href="./index.html">
-        <img src="./imagens/pokedex_kanto_by_thekevmeister_dcis2l3-fullview-removebg-preview.png" alt="Pokeball" />
-        <img
-          src="./imagens/giphy.gif"
-          alt="Pokédex Logo"
-          class="galera"
-        />
-      </a>
-      <div class="collapse navbar-collapse" id="navbarNav">
-        <!-- Adicione aqui os links do menu, se necessário -->
-      </div>
-      <div class="ml-auto my-2 my-lg-0">
-        <div class="search-bar">
-          <input
-            class="form-control mr-sm-2 search-input"
-            type="search"
-            placeholder="Pesquisar Pokémon..."
-            aria-label="Pesquisar"
-            id="searchInput"
-          />
-          <button
-            class="btn btn-primary my-2 my-sm-0 search-button"
-            onclick="searchPokemon()"
-          >
-            Pesquisar
-          </button>
-        </div>
-      </div>
-    </nav>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+  <title>Detalhes do Pokémon</title>
+  <link rel="stylesheet" href="styles.css">
 
-    <div class="container mt-5">
-      <!-- Detalhes do Pokémon -->
-      <div id="pokemon-details" class="text-center">
-        <!-- As informações do Pokémon serão exibidas aqui -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" />
+  
+  <!-- Seu CSS personalizado pode ser adicionado aqui -->
+
+  <style>
+    body {
+      background: linear-gradient(to bottom, #6ab7f5, #fff);
+      min-height: 100vh;
+    }
+  </style>
+
+</head>
+
+<body>
+  <!-- Barra de Navegação -->
+  <nav class="navbar navbar-expand-lg navbar-light bg-danger">
+    <a class="navbar-brand" href="./index.html">
+      <img src="./imagens/pokedex_kanto_by_thekevmeister_dcis2l3-fullview-removebg-preview.png" alt="Pokeball" />
+      <img src="./imagens/giphy.gif" alt="Pokédex Logo" class="galera" />
+    </a>
+    <div class="collapse navbar-collapse" id="navbarNav">
+      <!-- Adicione aqui os links do menu, se necessário -->
+    </div>
+    <div class="ml-auto my-2 my-lg-0">
+      <div class="search-bar">
+        <input class="form-control mr-sm-2 search-input" type="search" placeholder="Pesquisar Pokémon..."
+          aria-label="Pesquisar" id="searchInput" />
+        <button class="btn btn-primary my-2 my-sm-0 search-button" onclick="searchPokemon()">
+          Pesquisar
+        </button>
       </div>
     </div>
+  </nav>
 
-    <!-- Bootstrap JS e dependências -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+  <div class="container mt-5">
+    <!-- Detalhes do Pokémon -->
+    <div id="pokemon-details" class="text-center">
+      <!-- As informações do Pokémon serão exibidas aqui -->
+    </div>
+  </div>
 
-    <script>
-      document.addEventListener("DOMContentLoaded", function () {
-    // Obter o parâmetro 'url' da URL
-    const urlParams = new URLSearchParams(window.location.search);
-    const pokemonUrl = urlParams.get("url");
+  <!-- Bootstrap JS e dependências -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 
-    // Função para mostrar detalhes do Pokémon
-    fetch(pokemonUrl)
-      .then((response) => response.json())
-      .then((pokemon) => {
-        const pokemonDetailsContainer = document.getElementById("pokemon-details");
+  <script>
+    document.addEventListener("DOMContentLoaded", function () {
+      // Obter o parâmetro 'url' da URL
+      const urlParams = new URLSearchParams(window.location.search);
+      const pokemonUrl = urlParams.get("url");
 
-        // Obtém as versões da espécie do Pokémon
-        const speciesUrl = pokemon.species.url;
-        fetch(speciesUrl)
-          .then((response) => response.json())
-          .then((species) => {
-            const regionText = species.generation.name
-              ? `<p><strong>Geração:</strong> ${species.generation.name}</p>`
-              : "";
+      // Função para mostrar detalhes do Pokémon
+      fetch(pokemonUrl)
+        .then((response) => response.json())
+        .then((pokemon) => {
+          const pokemonDetailsContainer = document.getElementById("pokemon-details");
 
-            // Obtém a descrição do Pokémon
-            const flavorTextEntries = species.flavor_text_entries;
-            const description = flavorTextEntries.find(
-              (entry) => entry.language.name === "en"
-            );
+          // Obtém as versões da espécie do Pokémon
+          const speciesUrl = pokemon.species.url;
+          fetch(speciesUrl)
+            .then((response) => response.json())
+            .then((species) => {
+              const regionText = species.generation.name
+                ? `<p><strong>Geração:</strong> ${species.generation.name}</p>`
+                : "";
 
-            const descriptionText = description
-              ? `<p><strong>Descrição:</strong> ${description.flavor_text}</p>`
-              : "";
+              // Obtém a descrição do Pokémon
+              const flavorTextEntries = species.flavor_text_entries;
+              const description = flavorTextEntries.find(
+                (entry) => entry.language.name === "en"
+              );
 
-            // Obtém as fraquezas do Pokémon
-            const weaknessesPromises = pokemon.types.map((type) => {
-              const typeUrl = type.type.url;
-              return fetch(typeUrl)
-                .then((response) => response.json())
-                .then((typeDetails) =>
-                  typeDetails.damage_relations.double_damage_from.map(
-                    (weakness) => weakness.name
+              const descriptionText = description
+                ? `<p><strong>Descrição:</strong> ${description.flavor_text}</p>`
+                : "";
+
+              // Obtém as fraquezas do Pokémon
+              const weaknessesPromises = pokemon.types.map((type) => {
+                const typeUrl = type.type.url;
+                return fetch(typeUrl)
+                  .then((response) => response.json())
+                  .then((typeDetails) =>
+                    typeDetails.damage_relations.double_damage_from.map(
+                      (weakness) => weakness.name
+                    )
                   )
-                )
-                .catch((error) => {
-                  console.error("Erro ao obter fraquezas:", error);
-                  return [];
-                });
-            });
+                  .catch((error) => {
+                    console.error("Erro ao obter fraquezas:", error);
+                    return [];
+                  });
+              });
 
-            // Após todas as requisições estarem completas, exibe os detalhes
-            Promise.all(weaknessesPromises)
-              .then((allWeaknesses) => {
-                // Flatten the array of weaknesses
-                const uniqueWeaknesses = [...new Set(allWeaknesses.flat())];
+              // Após todas as requisições estarem completas, exibe os detalhes
+              Promise.all(weaknessesPromises)
+                .then((allWeaknesses) => {
+                  // Flatten the array of weaknesses
+                  const uniqueWeaknesses = [...new Set(allWeaknesses.flat())];
 
-                const weaknessesText =
-                  uniqueWeaknesses.length > 0
-                    ? `<p><strong>Fraquezas:</strong> ${uniqueWeaknesses.join(", ")}</p>`
-                    : "";
+                  const weaknessesText =
+                    uniqueWeaknesses.length > 0
+                      ? `<p><strong>Fraquezas:</strong> ${uniqueWeaknesses.join(", ")}</p>`
+                      : "";
 
-                pokemonDetailsContainer.innerHTML = `
-                  <img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/${
-                    pokemon.id
-                  }.png" class="img-fluid" alt="${pokemon.name}">
+                  pokemonDetailsContainer.innerHTML = `
+                  <img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/${pokemon.id
+                    }.png" class="img-fluid" alt="${pokemon.name}">
                   <div class="pokemon-info">
                     <h5 class="card-title">Detalhes do Pokémon - ${pokemon.name}</h5>
                     <p><strong>Número:</strong> ${pokemon.id}</p>
@@ -130,45 +122,46 @@
                     <p><strong>Estatísticas:</strong></p>
                     <ul>
                       ${pokemon.stats.map(
-                        (stat) => `<li><strong>${stat.stat.name}:</strong> ${stat.base_stat}</li>`
-                      ).join("")}
+                      (stat) => `<li><strong>${stat.stat.name}:</strong> ${stat.base_stat}</li>`
+                    ).join("")}
                     </ul>
                     ${weaknessesText}
                   </div>
                 `;
-              })
-              .catch((error) => {
-                console.error("Erro ao obter fraquezas:", error);
-              });
-          })
-          .catch((error) => {
-            console.error("Erro ao obter espécie do Pokémon:", error);
-          });
-      })
-      .catch((error) => {
-        console.error("Erro ao obter detalhes do Pokémon:", error);
-      });
-  });
-
-  // Função para pesquisar Pokémon
-  function searchPokemon() {
-    const searchInput = document.getElementById("searchInput").value.toLowerCase();
-
-    // Obtem todos os cards de Pokémon
-    const pokemonCards = document.querySelectorAll(".card");
-
-    // Percorre os cards para ocultar/mostrar com base na pesquisa
-    pokemonCards.forEach((card) => {
-      const pokemonName = card.querySelector(".card-title").textContent.toLowerCase();
-      const pokemonNumber = card.querySelector(".card-title").textContent.split(" - ")[0].slice(1);
-
-      if (pokemonName.includes(searchInput) || pokemonNumber.includes(searchInput)) {
-        card.style.display = "block";
-      } else {
-        card.style.display = "none";
-      }
+                })
+                .catch((error) => {
+                  console.error("Erro ao obter fraquezas:", error);
+                });
+            })
+            .catch((error) => {
+              console.error("Erro ao obter espécie do Pokémon:", error);
+            });
+        })
+        .catch((error) => {
+          console.error("Erro ao obter detalhes do Pokémon:", error);
+        });
     });
-  }
-    </script>
-  </body>
+
+    // Função para pesquisar Pokémon
+    function searchPokemon() {
+      const searchInput = document.getElementById("searchInput").value.toLowerCase();
+
+      // Obtem todos os cards de Pokémon
+      const pokemonCards = document.querySelectorAll(".card");
+
+      // Percorre os cards para ocultar/mostrar com base na pesquisa
+      pokemonCards.forEach((card) => {
+        const pokemonName = card.querySelector(".card-title").textContent.toLowerCase();
+        const pokemonNumber = card.querySelector(".card-title").textContent.split(" - ")[0].slice(1);
+
+        if (pokemonName.includes(searchInput) || pokemonNumber.includes(searchInput)) {
+          card.style.display = "block";
+        } else {
+          card.style.display = "none";
+        }
+      });
+    }
+  </script>
+</body>
+
 </html>
