--- a/pokemon-details.html
+++ b/pokemon-details.html
@@ -5,17 +5,14 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
   <title>Detalhes do Pokémon</title>
-  <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="details.css">
 
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" />
   
   <!-- Seu CSS personalizado pode ser adicionado aqui -->
 
   <style>
-    body {
-      background: linear-gradient(to bottom, #6ab7f5, #fff);
-      min-height: 100vh;
-    }
+    
   </style>
 
 </head>
@@ -24,7 +21,7 @@
   <!-- Barra de Navegação -->
   <nav class="navbar navbar-expand-lg navbar-light bg-danger">
     <a class="navbar-brand" href="./index.html">
-      <img src="./imagens/efff65ee37b35ea3b4df426ad32b1097-removebg-preview.png" alt="Pokeball" />
+      <img src="./imagens/pokedex_kanto_by_thekevmeister_dcis2l3-fullview-removebg-preview.png" alt="Pokeball" />
       <img src="./imagens/giphy.gif" alt="Pokédex Logo" class="galera" />
     </a>
     <div class="collapse navbar-collapse" id="navbarNav">
