--- a/pokemon-details.html
+++ b/pokemon-details.html
@@ -11,10 +11,6 @@
   
   <!-- Seu CSS personalizado pode ser adicionado aqui -->
 
-  <style>
-    
-  </style>
-
 </head>
 
 <body>
@@ -39,6 +35,8 @@
   </nav>
 
   <div class="container mt-5">
+    <img src="./imagens/efff65ee37b35ea3b4df426ad32b1097-removebg-preview.png" alt="pokedexImg" width=30% height=auto>
+
     <!-- Detalhes do Pokémon -->
     <div id="pokemon-details" class="text-center">
       <!-- As informações do Pokémon serão exibidas aqui -->
