--- a/pokemon-details.html
+++ b/pokemon-details.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" href="details.css">
 
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" />
-  
+
   <!-- Seu CSS personalizado pode ser adicionado aqui -->
 
 </head>
@@ -35,14 +35,19 @@
   </nav>
 
   <div class="container mt-5">
-    <img src="./imagens/efff65ee37b35ea3b4df426ad32b1097-removebg-preview.png" alt="pokedexImg" width=30% height=auto>
-
-    <!-- Detalhes do Pokémon -->
-    <div id="pokemon-details" class="text-center">
-      <!-- As informações do Pokémon serão exibidas aqui -->
-    </div>
-  </div>
-
+    <div class="col-md-6 mt-3"> <!-- ou col-lg-4 ou qualquer outra classe de coluna Bootstrap -->
+        <img src="./imagens/efff65ee37b35ea3b4df426ad32b1097-removebg-preview.png" alt="pokedexImg"
+          class="img-fluid custom-img">
+        </div>
+        <!-- Detalhes do Pokémon -->
+        <div class="col-md-6">
+        <div id="pokemon-details" class="text-center">
+          <!-- As informações do Pokémon serão exibidas aqui -->
+        </div>
+      </div>
+      
+    
+  
   <!-- Bootstrap JS e dependências -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 
